<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:background="#37b6c7"
    tools:context=".Activity.DangKy">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/edtTK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtUser"
                android:background="@color/color_edtUser"
                android:padding="@dimen/layout_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/edtMK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPass"
                android:background="@color/color_edtUser"
                android:padding="@dimen/layout_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/edtNlMK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtRePass"
                android:background="@color/color_edtUser"
                android:padding="@dimen/layout_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPhone"
                android:background="@color/color_edtUser"
                android:padding="@dimen/layout_margin"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTHDK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/body_button"
            android:text="@string/btnDangKy" />

        <Button
            android:id="@+id/btnTHHUY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/body_button"
            android:text="HỦY" />


    </LinearLayout>

</LinearLayout>